--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <button type="button" name="Experience"><a href="#exp">Experience</a></button>
         <button type="button" name="Tools"><a href="#tools">Tools</a></button>
         <button type="button" name="Skills"><a href="#skills">Skills</a></button>
-        <button type="button" name="My CV"><a href="download/CV_Mikalai Karol_Mar 2020_en_tra.pdf" download="download/CV_Mikalai Karol_Mar 2020_en_tra.pdf">My CV</a></button></td>
+        <button type="button" name="My CV"><a href="download/CV_Mikalai Karol_Oct_2022_en_tra.pdf" download="download/CV_Mikalai Karol_Oct_2022_en_tra.pdf">My CV</a></button></td>
     </tr>
   </table>
   <hr size="3"> <!-- 3 pixel thick horizontal line. -->
